--- a/BlazorProject/Client/Pages/Viewer.razor
+++ b/BlazorProject/Client/Pages/Viewer.razor
@@ -36,6 +36,8 @@
 
     <div id="viewer-container">
         <div class="btn-group" role="group">
+            <button title="Models" class="buttoncube"></button>
+
             <button title="Toon alles" class="buttoneye" @onclick="showAll"></button>
             <button title="Toon geselecteerde" class="dropbtn" @onclick="showSelected"></button>
 
