--- a/BlazorProject/Client/wwwroot/css/app.css
+++ b/BlazorProject/Client/wwwroot/css/app.css
@@ -43,11 +43,28 @@ a, .btn-link {
 .dropdown-content {
     display: none;
     position: absolute;
-    background-color: #fff;
+    background-color: #ffffff;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    padding: 8px;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     z-index: 1;
+    top: 50%;
+    left: 20px;
+    transform: translateY(-50%);
+    max-height: 400px; /* Adjust the height as needed before scrollbar pops up*/
+    overflow-y: auto;
 }
+
+    .dropdown-content label {
+        display: block;
+        margin-bottom: 8px;
+    }
+
+    .dropdown-content input[type="checkbox"] {
+        margin-right: 8px;
+    }
 
     .dropdown-content a {
         color: #333;
